@@ -299,12 +299,29 @@ $dep->install (qw(cairo-perl.h
                   build/cairo-perl-auto.typemap));
 $dep->save_config ('build/IFiles.pm');
 
+my @exports = qw(
+	cairo_object_from_sv
+	cairo_object_to_sv
+	cairo_struct_from_sv
+	cairo_struct_to_sv
+	newSVCairoFontExtents
+	newSVCairoTextExtents
+	newSVCairoGlyph
+	SvCairoGlyph
+	newSVCairoPath
+	SvCairoPath
+	cairo_surface_to_sv
+	cairo_pattern_to_sv
+);
+
 WriteMakefile (
 	NAME          => 'Cairo',
 	VERSION_FROM  => 'Cairo.pm',
 	ABSTRACT_FROM => 'Cairo.pm',
 	PREREQ_PM     => \%prereqs,
 	XSPROTOARG    => '-noprototypes',
+	FUNCLIST      => \@exports,
+	DL_FUNCS      => { Cairo=> [] },
 	$dep->get_makefile_vars,
 );
 
